# dreamz

./: .gitignore  README.md
canvas/: canvas.html  canvas.py  styles.css
cuda/: assert_cuda.c  assert_cuda.h  interop.c  interop.h  kernel.cu  main.c
examples/: cppn_det_multiclass.ipynb  cppn_detailed-Copy1.ipynb  cppn_detailed-classact-match-img.ipynb  cppn_detailed-classact.ipynb  cppn_detailed-parallel.ipynb  cppn_detailed.ipynb  cppn_ifft.ipynb  cppn_with_upsample.ipynb  play.ipynb  (+6 more)
sdl/dcgan/: CMakeCache.txt  CMakeLists.txt  CMakeLists_old.txt  Makefile  cmake_install.cmake  dcgan  dcgan.cpp  dcgan.cpp.old  dcgan_old.cpp  ltimer.cpp  midi.cpp
sdl/dcgan/cmake-modules/: FindRTMIDI.cmake
sdl/dcgan/midi/rtmidi-4.0.0/: Makefile  Makefile.in  config.status  configure  librtmidi.la  librtmidi_la-RtMidi.lo  librtmidi_la-rtmidi_c.lo  libtool  rtmidi.pc
sdl/dcgan/midi/rtmidi-4.0.0/.deps/: librtmidi_la-RtMidi.Plo  librtmidi_la-rtmidi_c.Plo
sdl/dcgan/midi/rtmidi-4.0.0/.libs/: librtmidi.lai  librtmidi.so.5  librtmidi.so.5.0.0
sdl/dcgan/midi/rtmidi-4.0.0/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
sdl/dcgan/midi/rtmidi-4.0.0/doc/: Makefile  Makefile.in
sdl/dcgan/midi/rtmidi-4.0.0/tests/: Makefile  Makefile.in  apinames  cmidiin  midiclock_in  midiclock_out  midiout  midiprobe  qmidiin  sysextest
sdl/dcgan/midi/rtmidi-4.0.0/tests/.deps/: apinames.Po  cmidiin.Po  midiclock.Po  midiout.Po  midiprobe.Po  qmidiin.Po  sysextest.Po
sdl/dcgan/midi/rtmidi-4.0.0/tests/.libs/: apinames  cmidiin  midiclock_in  midiout  midiprobe  qmidiin  sysextest
(+62 files in other folders)
